--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prashiksha"
-        tools:targetApi="31" >
-
-        <activity android:name=".Interface1Activity" android:theme="@style/Theme.Prashiksha" />
-        <activity android:name=".Interface2Activity" android:theme="@style/Theme.Prashiksha" />
+        tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Prashiksha">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +23,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-</manifest>
+
+    <activity
+        android:name=".Interface1Activity"
+        android:theme="@style/Theme.Prashiksha" />
+    <activity
+        android:name=".Interface2Activity"
+        android:theme="@style/Theme.Prashiksha" />
+    <activity
+        android:name=".MainActivity"
+        android:exported="true"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Prashiksha">
+
+    </activity>
+</application>
+
+    </manifest>
