--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,10 @@
 [versions]
 agp = "8.5.0"
+androidxAppcompat = "1.7.0"
+appcompatVersion = "1.4.1"
 exoplayer = "2.19.1"
 exoplayerVersion = "2.16.1"
+googleMaterial = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -11,12 +14,17 @@ material = "1.10.0"
 constraintlayout = "2.1.4"
 lifecycleLivedataKtx = "2.6.1"
 lifecycleViewmodelKtx = "2.6.1"
+materialVersion = "1.4.0"
 navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 media3Common = "1.3.1"
 activity = "1.9.0"
+annotation = "1.6.0"
+playServicesAuth = "21.2.0"
 
 [libraries]
+appcompat-v141 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+appcompat-v170 = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppcompat" }
 exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
 exoplayer2-exoplayer = { module = "com.google.android.exoplayer2:exoplayer", version.ref = "exoplayerVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -28,10 +36,14 @@ material = { group = "com.google.android.material", name = "material", version.r
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+material-v1120 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
+material-v140 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3Common" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
