--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,33 +11,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prashiksha"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+<!--        <activity-->
+<!--            android:name=".analysis_layout"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".ActivityInterface"
+            android:exported="false" />
+
+        <activity android:name=".AnalysisActivity" />
 
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.Prashiksha">
+            android:theme="@style/Theme.Prashiksha" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Interface1Activity"
+            android:theme="@style/Theme.Prashiksha" />
+        <activity
+            android:name=".Interface2Activity"
+            android:theme="@style/Theme.Prashiksha" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Prashiksha" />
+    </application>
 
-
-    <activity
-        android:name=".Interface1Activity"
-        android:theme="@style/Theme.Prashiksha" />
-    <activity
-        android:name=".Interface2Activity"
-        android:theme="@style/Theme.Prashiksha" />
-    <activity
-        android:name=".MainActivity"
-        android:exported="true"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.Prashiksha">
-
-    </activity>
-</application>
-
-    </manifest>
+</manifest>
